--- a/source/RevitDevTool/RevitDevTool.csproj
+++ b/source/RevitDevTool/RevitDevTool.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<UseWPF>true</UseWPF>
+		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
 		<PlatformTarget>x64</PlatformTarget>
 		<ImplicitUsings>true</ImplicitUsings>
@@ -41,10 +42,7 @@
 	<ItemGroup>
 		<!-- Revit API-->
 		<PackageReference Include="Nice3point.Revit.Build.Tasks" Version="3.*" />
-		<PackageReference Include="Nice3point.Revit.Toolkit" Version="$(RevitVersion).*"/>
-		<PackageReference Include="Nice3point.Revit.Extensions" Version="$(RevitVersion).*"/>
-		<PackageReference Include="Nice3point.Revit.Api.RevitAPI" Version="$(RevitVersion).*"/>
-		<PackageReference Include="Nice3point.Revit.Api.RevitAPIUI" Version="$(RevitVersion).*"/>
+		<PackageReference Include="Revit_All_Main_Versions_API_x64" Version="$(RevitVersion).*" IncludeAssets="build; compile" PrivateAssets="All" />
 		
 		<!-- MVVM -->
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0"/>
@@ -76,20 +74,5 @@
 		<RemoveDir Directories="$(AppData)\Autodesk\Revit\Addins\$(RevitVersion)\$(ProjectName)" />
 		<Delete Files="$(AppData)\Autodesk\Revit\Addins\$(RevitVersion)\$(ProjectName).addin" />
 	</Target>
-
-	<ItemGroup>
-		<Compile Update="Theme\Resource.Designer.cs">
-			<DesignTime>True</DesignTime>
-			<AutoGen>True</AutoGen>
-			<DependentUpon>Resource.resx</DependentUpon>
-		</Compile>
-	</ItemGroup>
-
-	<ItemGroup>
-		<EmbeddedResource Update="Theme\Resource.resx">
-			<Generator>ResXFileCodeGenerator</Generator>
-			<LastGenOutput>Resource.Designer.cs</LastGenOutput>
-		</EmbeddedResource>
-	</ItemGroup>
 
 </Project>
