--- a/source/RevitDevTool/RevitDevTool.csproj
+++ b/source/RevitDevTool/RevitDevTool.csproj
@@ -13,6 +13,11 @@
 		<Configurations>$(Configurations)Release R21;Release R22;Release R23;Release R24;Release R25;Release R26</Configurations>
 	</PropertyGroup>
 
+  <PropertyGroup>
+    <IsRepackable>true</IsRepackable>
+    <RepackBinariesExcludes>$(AssemblyName).UI.dll;System*.dll;MaterialDesign*.dll;CommunityToolkit.Mvvm.dll</RepackBinariesExcludes>
+  </PropertyGroup>
+
 	<!-- Revit Versions -->
 	<PropertyGroup Condition="$(Configuration.Contains('R21'))">
 		<RevitVersion>2021</RevitVersion>
@@ -45,15 +50,22 @@
 		<PackageReference Include="Revit_All_Main_Versions_API_x64" Version="$(RevitVersion).*" IncludeAssets="build; compile" PrivateAssets="All" />
 		
 		<!-- MVVM -->
-		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0"/>
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		
 		<!-- Utils -->
 		<PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
+		<PackageReference Include="PolySharp" Version="*" PrivateAssets="All" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+		<PackageReference Include="ILRepack" Version="2.0.41">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+
+		<!--UI-->
 		<PackageReference Include="MaterialDesignColors" Version="5.2.1" />
 		<PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
+
+		<!--Logging-->
 		<PackageReference Include="Serilog.Sinks.RichTextBox.Wpf" Version="1.1.0" />
-		<PackageReference Include="SerilogTraceListener" Version="3.2.0" />
-		<PackageReference Include="PolySharp" Version="*" PrivateAssets="All" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive"/>
 	</ItemGroup>
 
 	<ItemGroup>
