update: new designed icons

--- a/source/RevitDevTool/RevitDevTool.csproj
+++ b/source/RevitDevTool/RevitDevTool.csproj
@@ -67,8 +67,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Resource Include="Resources\Icons\TraceCommand32_light.tiff" />
-        <Resource Include="Resources\Icons\TraceCommand32_dark.tiff" />
+        <Resource Include="Resources\Icons\TraceGeometry32_dark.tiff" />
+        <Resource Include="Resources\Icons\TraceGeometry32_light.tiff" />
     </ItemGroup>
 
     <ItemGroup>
