--- a/source/RevitDevTool.UI.Abstractions/RevitDevTool.UI.Abstractions.csproj
+++ b/source/RevitDevTool.UI.Abstractions/RevitDevTool.UI.Abstractions.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <UseWpf>true</UseWpf>
+        <nullable>enable</nullable>
         <LangVersion>latest</LangVersion>
         <TargetFrameworks>net48;net8.0-windows</TargetFrameworks>
         <RootNamespace>Wpf.Ui.Abstractions</RootNamespace>
