--- a/source/RevitDevTool/RevitDevTool.csproj
+++ b/source/RevitDevTool/RevitDevTool.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <UseWPF>true</UseWPF>
+        <UseWindowsForms>true</UseWindowsForms>
         <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
         <PlatformTarget>x64</PlatformTarget>
@@ -63,7 +64,7 @@
         <PackageReference Include="ILRepack" Version="2.0.41" />
         
         <!-- Logging -->
-        <PackageReference Include="Serilog.Sinks.RichTextBox.Wpf" Version="1.1.0" />
+        <PackageReference Include="Serilog.Sinks.RichTextBox.WinForms.Colored" Version="3.1.3" />
     </ItemGroup>
 
     <ItemGroup>
