--- a/source/RevitDevTool/RevitDevTool.csproj
+++ b/source/RevitDevTool/RevitDevTool.csproj
@@ -16,7 +16,7 @@
 
     <PropertyGroup>
         <IsRepackable>true</IsRepackable>
-        <RepackBinariesExcludes>$(AssemblyName).UI*.dll;System*.dll</RepackBinariesExcludes>
+        <RepackBinariesExcludes>$(AssemblyName).UI*.dll;System*.dll;ColorPicker*.dll;Microsoft*.dll</RepackBinariesExcludes>
     </PropertyGroup>
 
     <!-- Revit Versions -->
@@ -57,12 +57,16 @@
 
         <!-- UI -->
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+        <PackageReference Include="PixiEditor.ColorPicker" Version="3.4.2" />
+        <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" ExcludeAssets="runtime" PrivateAssets="all" Condition="$(RevitVersion) &gt;= '2025'"/>
+        <PackageReference Include="ricaun.Revit.UI" Version="0.8.0" />
         <PackageReference Include="Serilog.Sinks.RichTextBox.WinForms.Colored" Version="3.1.3" />
 
         <!-- Utils -->
         <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
         <PackageReference Include="PolySharp" Version="*" PrivateAssets="All" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
         <PackageReference Include="ILRepack" Version="2.0.41" />
+        <PackageReference Include="System.Text.Json" Version="8.0.6" Condition="$(DefineConstants.Contains('NETFRAMEWORK'))" />
     </ItemGroup>
 
     <ItemGroup>
