feat(logging): add log settings configuration and management UI
- Introduce LogConfig class for log settings management
- Implement LogSettingsView for user interface to configure log options
- Add functionality to save log settings to configuration
- Include options for log format, stack trace inclusion, and file management

--- a/source/RevitDevTool/RevitDevTool.csproj
+++ b/source/RevitDevTool/RevitDevTool.csproj
@@ -65,6 +65,10 @@
         <PackageReference Include="PolySharp" Version="*" PrivateAssets="All" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
         <PackageReference Include="ILRepack" Version="2.0.41" />
         <PackageReference Include="System.Text.Json" Version="8.0.6" Condition="$(DefineConstants.Contains('NETFRAMEWORK'))" />
+
+        <!-- FileSystem net48 -->
+        <PackageReference Include="Microsoft-WindowsAPICodePack-Core" Version="1.1.5" Condition="!$(DefineConstants.Contains('NETCORE'))"/>
+        <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" Condition="!$(DefineConstants.Contains('NETCORE'))"/>
     </ItemGroup>
 
     <ItemGroup>
