--- a/source/RevitDevTool/RevitDevTool.csproj
+++ b/source/RevitDevTool/RevitDevTool.csproj
@@ -16,7 +16,10 @@
 
     <PropertyGroup>
         <IsRepackable>true</IsRepackable>
-        <RepackBinariesExcludes>$(AssemblyName).UI*.dll</RepackBinariesExcludes>
+        <RepackBinariesExcludes>
+            $(AssemblyName).UI*.dll
+            ;SQLite.Interop.dll
+        </RepackBinariesExcludes>
     </PropertyGroup>
 
     <!-- Revit Versions -->
@@ -58,17 +61,33 @@
         <!-- UI -->
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
         <PackageReference Include="ricaun.Revit.UI" Version="0.8.0" />
-        <PackageReference Include="Serilog.Sinks.RichTextBox.WinForms.Colored" Version="3.1.3" />
+        
+        <!-- Serilog -->
+        <PackageReference Include="Serilog" Version="4.3.1-dev-02395" />
+        <PackageReference Include="Serilog.Formatting.Compact" Version="3.0.0" />
+        <PackageReference Include="Serilog.Sinks.File" Version="7.0.1-dev-02315" />
+        <PackageReference Include="Serilog.Sinks.SQLite" Version="6.0.0" />
+        <PackageReference Include="Serilog.Sinks.RichTextBox.WinForms.Colored" Version="3.2.0" />
 
         <!-- Utils -->
-        <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
+        <PackageReference Include="JetBrains.Annotations" Version="2025.2.4" />
         <PackageReference Include="PolySharp" Version="*" PrivateAssets="All" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
         <PackageReference Include="ILRepack" Version="2.0.41" />
         <PackageReference Include="System.Text.Json" Version="8.0.6" Condition="$(DefineConstants.Contains('NETFRAMEWORK'))" />
+    </ItemGroup>
 
-        <!-- FileSystem net48 -->
-        <PackageReference Include="Microsoft-WindowsAPICodePack-Core" Version="1.1.5" Condition="!$(DefineConstants.Contains('NETCORE'))"/>
-        <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" Condition="!$(DefineConstants.Contains('NETCORE'))"/>
+    <ItemGroup Condition="!$(DefineConstants.Contains('NETFRAMEWORK'))">
+        <Content Include="bin\$(Configuration)\runtimes\win-x64\native\SQLite.Interop.dll">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <Link>SQLite.Interop.dll</Link>
+        </Content>
+    </ItemGroup>
+
+    <ItemGroup Condition="$(DefineConstants.Contains('NETFRAMEWORK'))">
+        <Content Include="bin\$(Configuration)\x64\SQLite.Interop.dll">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <Link>SQLite.Interop.dll</Link>
+        </Content>
     </ItemGroup>
 
     <ItemGroup>
