feat(logging): add WPF trace configuration options and update log settings
- Introduced IncludeWpfTrace and WpfTraceLevel properties in LogConfig
- Updated log settings to respect WPF trace level during initialization
- Enhanced LogSettingsView to allow user configuration of WPF trace options

--- a/source/RevitDevTool/RevitDevTool.csproj
+++ b/source/RevitDevTool/RevitDevTool.csproj
@@ -89,8 +89,7 @@
     </Target>
 
     <ItemGroup>
-        <Resource Include="Resources\Icons\TraceGeometry32_dark.tiff" />
-        <Resource Include="Resources\Icons\TraceGeometry32_light.tiff" />
+        <Resource Include="Resources\Icons\*.*" />
     </ItemGroup>
 
     <ItemGroup>
