feat(logging): implement logging service and visualization settings
- Introduced ILoggerAdapter and related logging interfaces for flexible logging.
- Added ISettingsService for managing application settings.
- Implemented visualization settings for bounding boxes, faces, meshes, polylines, solids, and XYZ axes.
- Refactored existing settings views to utilize new ViewModel structure and theme watcher service.
- Removed deprecated settings views and streamlined navigation for settings management.

--- a/source/RevitDevTool/RevitDevTool.csproj
+++ b/source/RevitDevTool/RevitDevTool.csproj
@@ -50,6 +50,7 @@
 
     <ItemGroup>
         <!-- Revit API-->
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.1" />
         <PackageReference Include="Nice3point.Revit.Build.Tasks" Version="3.*" />
         <PackageReference Include="Nice3point.Revit.Toolkit" Version="$(RevitVersion).*" />
         <PackageReference Include="Nice3point.Revit.Extensions" Version="$(RevitVersion).*" />
@@ -74,6 +75,7 @@
         <PackageReference Include="PolySharp" Version="*" PrivateAssets="All" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
         <PackageReference Include="ILRepack" Version="2.0.41" />
         <PackageReference Include="System.Text.Json" Version="8.0.6" Condition="$(DefineConstants.Contains('NETFRAMEWORK'))" />
+        <PackageReference Include="ZLogger" Version="2.5.10" />
     </ItemGroup>
 
     <!-- Copy SQLite.Interop.dll -->
