--- a/source/RevitDevTool/RevitDevTool.csproj
+++ b/source/RevitDevTool/RevitDevTool.csproj
@@ -8,6 +8,7 @@
         <PlatformTarget>x64</PlatformTarget>
         <ImplicitUsings>true</ImplicitUsings>
         <Prefer32Bit>false</Prefer32Bit>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <DeployRevitAddin>true</DeployRevitAddin>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
         <Configurations>Debug R21;Debug R22;Debug R23;Debug R24;Debug R25;Debug R26</Configurations>
@@ -75,11 +76,17 @@
         <!--Hosting-->
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.1" />
 
+        <!-- ZLogger -->
+        <PackageReference Include="ZLogger" Version="2.5.10" />
+
         <!-- Utils -->
         <PackageReference Include="JetBrains.Annotations" Version="2025.2.4" />
         <PackageReference Include="PolySharp" Version="*" PrivateAssets="All" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
         <PackageReference Include="ILRepack" Version="2.0.41" />
-        <PackageReference Include="ZLogger" Version="2.5.10" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\RevitDevTool.RichTextBox.Colored\RevitDevTool.RichTextBox.Colored.csproj" />
     </ItemGroup>
 
 <!--    <ItemGroup Condition="'$(TargetFramework)' == 'net48' ">-->
