--- a/install/Installer.csproj
+++ b/install/Installer.csproj
@@ -10,8 +10,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="WixSharp.bin" Version="1.26.0"/>
-        <PackageReference Include="WixSharp.wix.bin" Version="3.14.1"/>
+        <PackageReference Include="WixSharp.bin"/>
+        <PackageReference Include="WixSharp.wix.bin"/>
     </ItemGroup>
 
 </Project>
