--- a/source/RevitDevTool.RichTextBox.Colored/RevitDevTool.RichTextBox.Colored.csproj
+++ b/source/RevitDevTool.RichTextBox.Colored/RevitDevTool.RichTextBox.Colored.csproj
@@ -11,8 +11,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.1" />
-      <PackageReference Include="ZLogger" Version="2.5.10" />
+      <PackageReference Include="Microsoft.Extensions.Hosting"/>
+      <PackageReference Include="ZLogger"/>
     </ItemGroup>
 
 </Project>
