--- a/source/RevitDevTool/RevitDevTool.csproj
+++ b/source/RevitDevTool/RevitDevTool.csproj
@@ -3,16 +3,7 @@
     <PropertyGroup>
         <UseWPF>true</UseWPF>
         <UseWindowsForms>true</UseWindowsForms>
-        <Nullable>enable</Nullable>
-        <LangVersion>latest</LangVersion>
-        <PlatformTarget>x64</PlatformTarget>
-        <ImplicitUsings>true</ImplicitUsings>
-        <Prefer32Bit>false</Prefer32Bit>
-        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <DeployRevitAddin>true</DeployRevitAddin>
-        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-        <Configurations>Debug R21;Debug R22;Debug R23;Debug R24;Debug R25;Debug R26</Configurations>
-        <Configurations>$(Configurations)Release R21;Release R22;Release R23;Release R24;Release R25;Release R26</Configurations>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -25,101 +16,40 @@
         </RepackBinariesExcludes>
     </PropertyGroup>
 
-    <!-- Revit Versions -->
-    <PropertyGroup Condition="$(Configuration.Contains('R21'))">
-        <RevitVersion>2021</RevitVersion>
-        <TargetFramework>net48</TargetFramework>
-    </PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('R22'))">
-        <RevitVersion>2022</RevitVersion>
-        <TargetFramework>net48</TargetFramework>
-    </PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('R23'))">
-        <RevitVersion>2023</RevitVersion>
-        <TargetFramework>net48</TargetFramework>
-    </PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('R24'))">
-        <RevitVersion>2024</RevitVersion>
-        <TargetFramework>net48</TargetFramework>
-    </PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('R25'))">
-        <RevitVersion>2025</RevitVersion>
-        <TargetFramework>net8.0-windows</TargetFramework>
-    </PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('R26'))">
-        <RevitVersion>2026</RevitVersion>
-        <TargetFramework>net8.0-windows</TargetFramework>
-    </PropertyGroup>
-
     <ItemGroup>
         <!-- Revit API-->
-        <PackageReference Include="Nice3point.Revit.Build.Tasks" Version="3.*" />
-        <PackageReference Include="Nice3point.Revit.Toolkit" Version="$(RevitVersion).*" />
-        <PackageReference Include="Nice3point.Revit.Extensions" Version="$(RevitVersion).*" />
-        <PackageReference Include="Nice3point.Revit.Api.RevitAPI" Version="$(RevitVersion).*" />
-        <PackageReference Include="Nice3point.Revit.Api.RevitAPIUI" Version="$(RevitVersion).*" />
-        <PackageReference Include="Nice3point.Revit.Api.UIFramework" Version="$(RevitVersion).*" />
-        <PackageReference Include="Nice3point.Revit.Api.AdWindows" Version="$(RevitVersion).*" />
+        <PackageReference Include="Nice3point.Revit.Build.Tasks"/>
+        <PackageReference Include="Nice3point.Revit.Toolkit" VersionOverride="$(RevitVersion).*" />
+        <PackageReference Include="Nice3point.Revit.Extensions" VersionOverride="$(RevitVersion).*" />
+        <PackageReference Include="Nice3point.Revit.Api.RevitAPI" VersionOverride="$(RevitVersion).*" />
+        <PackageReference Include="Nice3point.Revit.Api.RevitAPIUI" VersionOverride="$(RevitVersion).*" />
+        <PackageReference Include="Nice3point.Revit.Api.UIFramework" VersionOverride="$(RevitVersion).*" />
+        <PackageReference Include="Nice3point.Revit.Api.AdWindows" VersionOverride="$(RevitVersion).*" />
 
         <!-- UI -->
-        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-        <PackageReference Include="ricaun.Revit.UI" Version="0.8.0" />
-        <PackageReference Include="MahApps.Metro" Version="3.0.0-rc0529" />
+        <PackageReference Include="CommunityToolkit.Mvvm"/>
+        <PackageReference Include="ricaun.Revit.UI"/>
+        <PackageReference Include="MahApps.Metro"/>
         
         <!-- Serilog -->
-        <PackageReference Include="Serilog" Version="4.3.1-dev-02395" />
-        <PackageReference Include="Serilog.Formatting.Compact" Version="3.0.0" />
-        <PackageReference Include="Serilog.Sinks.File" Version="7.0.1-dev-02315" />
-        <PackageReference Include="Serilog.Sinks.SQLite" Version="6.0.0" />
-        <PackageReference Include="Serilog.Sinks.RichTextBox.WinForms.Colored" Version="3.2.0" />
+        <PackageReference Include="Serilog"/>
+        <PackageReference Include="Serilog.Formatting.Compact"/>
+        <PackageReference Include="Serilog.Sinks.File"/>
+        <PackageReference Include="Serilog.Sinks.SQLite"/>
+        <PackageReference Include="Serilog.Sinks.RichTextBox.WinForms.Colored"/>
         
         <!--Hosting-->
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.1" />
-
-        <!-- ZLogger -->
-        <PackageReference Include="ZLogger" Version="2.5.10" />
+        <PackageReference Include="Microsoft.Extensions.Hosting"/>
 
         <!-- Utils -->
-        <PackageReference Include="JetBrains.Annotations" Version="2025.2.4" />
-        <PackageReference Include="PolySharp" Version="*" PrivateAssets="All" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
-        <PackageReference Include="ILRepack" Version="2.0.41" />
+        <PackageReference Include="JetBrains.Annotations" />
+        <PackageReference Include="PolySharp" PrivateAssets="All" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+        <PackageReference Include="ILRepack" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\RevitDevTool.RichTextBox.Colored\RevitDevTool.RichTextBox.Colored.csproj" />
     </ItemGroup>
-
-<!--    <ItemGroup Condition="'$(TargetFramework)' == 'net48' ">-->
-<!--        <EmbeddedResource Include="$(PkgMahApps_Metro)\lib\net462\MahApps.Metro.dll">-->
-<!--            <LogicalName>RevitDevTool.Libs.MahApps.Metro.dll</LogicalName>-->
-<!--        </EmbeddedResource>-->
-
-<!--        <EmbeddedResource Include="$(PkgControlzEx)\lib\net462\ControlzEx.dll">-->
-<!--            <LogicalName>RevitDevTool.Libs.ControlzEx.dll</LogicalName>-->
-<!--        </EmbeddedResource>-->
-
-<!--        <EmbeddedResource Include="$(PkgMicrosoft_Xaml_Behaviors_Wpf)\lib\net462\Microsoft.Xaml.Behaviors.dll">-->
-<!--            <LogicalName>RevitDevTool.Libs.Microsoft.Xaml.Behaviors.dll</LogicalName>-->
-<!--        </EmbeddedResource>-->
-<!--    </ItemGroup>-->
-
-<!--    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">-->
-<!--        <EmbeddedResource Include="$(PkgMahApps_Metro)\lib\net8.0-windows7.0\MahApps.Metro.dll">-->
-<!--            <LogicalName>RevitDevTool.Libs.MahApps.Metro.dll</LogicalName>-->
-<!--        </EmbeddedResource>-->
-
-<!--        <EmbeddedResource Include="$(PkgControlzEx)\lib\net8.0-windows7.0\ControlzEx.dll">-->
-<!--            <LogicalName>RevitDevTool.Libs.ControlzEx.dll</LogicalName>-->
-<!--        </EmbeddedResource>-->
-
-<!--        <EmbeddedResource Include="$(PkgMicrosoft_Xaml_Behaviors_Wpf)\lib\net6.0-windows7.0\Microsoft.Xaml.Behaviors.dll">-->
-<!--            <LogicalName>RevitDevTool.Libs.Microsoft.Xaml.Behaviors.dll</LogicalName>-->
-<!--        </EmbeddedResource>-->
-<!--    </ItemGroup>-->
-
-<!--    <PropertyGroup>-->
-<!--        <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>-->
-<!--    </PropertyGroup>-->
 
     <!-- Copy SQLite.Interop.dll -->
     <Target Name="CopySQLiteInterop" AfterTargets="Build">
