--- a/.editorconfig
+++ b/.editorconfig
@@ -54,26 +54,26 @@ dotnet_style_require_accessibility_modifiers = for_non_interface_members
 # Expression-level preferences
 dotnet_prefer_system_hash_code = true
 dotnet_style_coalesce_expression = true:silent
-dotnet_style_collection_initializer = true
+dotnet_style_collection_initializer = true:silent
 dotnet_style_explicit_tuple_names = true:silent
 dotnet_style_namespace_match_folder = true
 dotnet_style_null_propagation = true:silent
-dotnet_style_object_initializer = true
+dotnet_style_object_initializer = true:silent
 dotnet_style_operator_placement_when_wrapping = beginning_of_line
 dotnet_style_prefer_auto_properties = true
 dotnet_style_prefer_collection_expression = when_types_loosely_match
-dotnet_style_prefer_compound_assignment = true
+dotnet_style_prefer_compound_assignment = true:silent
 dotnet_style_prefer_conditional_expression_over_assignment = true
 dotnet_style_prefer_conditional_expression_over_return = true
 dotnet_style_prefer_foreach_explicit_cast_in_source = when_strongly_typed
 dotnet_style_prefer_inferred_anonymous_type_member_names = true
 dotnet_style_prefer_inferred_tuple_names = true
 dotnet_style_prefer_is_null_check_over_reference_equality_method = true:silent
-dotnet_style_prefer_simplified_boolean_expressions = true
+dotnet_style_prefer_simplified_boolean_expressions = true:silent
 dotnet_style_prefer_simplified_interpolation = true
 
 # Field preferences
-dotnet_style_readonly_field = true
+dotnet_style_readonly_field = true:silent
 
 # Parameter preferences
 dotnet_code_quality_unused_parameters = all
@@ -108,16 +108,16 @@ csharp_style_pattern_matching_over_is_with_cast_check = true:silent
 csharp_style_prefer_extended_property_pattern = true
 csharp_style_prefer_not_pattern = true:silent
 csharp_style_prefer_pattern_matching = true
-csharp_style_prefer_switch_expression = true
+csharp_style_prefer_switch_expression = true:silent
 
 # Null-checking preferences
 csharp_style_conditional_delegate_call = true:silent
 
 # Modifier preferences
 csharp_prefer_static_anonymous_function = true
-csharp_prefer_static_local_function = true
+csharp_prefer_static_local_function = true:silent
 csharp_preferred_modifier_order = public,private,protected,internal,file,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,required,volatile,async
-csharp_style_prefer_readonly_struct = true
+csharp_style_prefer_readonly_struct = true:silent
 csharp_style_prefer_readonly_struct_member = true
 
 # Code-block preferences
@@ -131,13 +131,13 @@ csharp_style_prefer_simple_property_accessors = true
 csharp_style_prefer_top_level_statements = false
 
 # Expression-level preferences
-csharp_prefer_simple_default_expression = true
+csharp_prefer_simple_default_expression = true:silent
 csharp_style_deconstructed_variable_declaration = true
-csharp_style_implicit_object_creation_when_type_is_apparent = true
-csharp_style_inlined_variable_declaration = true
+csharp_style_implicit_object_creation_when_type_is_apparent = true:silent
+csharp_style_inlined_variable_declaration = true:silent
 csharp_style_prefer_implicitly_typed_lambda_expression = true
 csharp_style_prefer_index_operator = true
-csharp_style_prefer_local_over_anonymous_function = true
+csharp_style_prefer_local_over_anonymous_function = true:silent
 csharp_style_prefer_null_check_over_type_check = true:silent
 csharp_style_prefer_range_operator = true
 csharp_style_prefer_tuple_swap = true
