refactor(logging): update log configuration
- Changed LogConfig to use LogFolder property for log storage
- Updated Serilog and ZLogger factories to construct log file paths dynamically
- Refactored related methods to ensure proper handling of log folder
- Added IsSaveLogChangedMessage for log save state changes

--- a/source/RevitDevTool/RevitDevTool.csproj
+++ b/source/RevitDevTool/RevitDevTool.csproj
@@ -44,6 +44,7 @@
         <PackageReference Include="JetBrains.Annotations" />
         <PackageReference Include="PolySharp" PrivateAssets="All" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
         <PackageReference Include="ILRepack" />
+        <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Condition="$(DefineConstants.Contains('NETFRAMEWORK'))"/>
     </ItemGroup>
 
     <ItemGroup>
