--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -17,6 +17,7 @@
         <PackageVersion Include="Nice3point.Revit.Build.Tasks" Version="3.0.1" />
         <PackageVersion Include="JetBrains.Annotations" Version="2025.2.4"/>
         <PackageVersion Include="PolySharp" Version="1.15.0"/>
+        <PackageVersion Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5"/>
         <!--UI-->
         <PackageVersion Include="MahApps.Metro" Version="3.0.0-rc0529"/>
         <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0"/>
