--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,37 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <PropertyGroup>
-        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-    </PropertyGroup>
-    <ItemGroup>
-        <!--Ioc-->
-        <PackageVersion Include="Microsoft.Extensions.Hosting" Version="10.0.1"/>
-        <!--Logging-->
-        <PackageVersion Include="Serilog" Version="4.3.1-dev-02395"/>
-        <PackageVersion Include="Serilog.Formatting.Compact" Version="3.0.0"/>
-        <PackageVersion Include="Serilog.Sinks.File" Version="7.0.1-dev-02315"/>
-        <PackageVersion Include="Serilog.Sinks.SQLite" Version="6.0.0"/>
-        <PackageVersion Include="Serilog.Sinks.RichTextBox.WinForms.Colored" Version="3.2.0"/>
-        <PackageVersion Include="ZLogger" Version="2.5.10"/>
-        <!--Utilities-->
-        <PackageVersion Include="Nice3point.Revit.Build.Tasks" Version="3.0.1" />
-        <PackageVersion Include="JetBrains.Annotations" Version="2025.2.4"/>
-        <PackageVersion Include="PolySharp" Version="1.15.0"/>
-        <PackageVersion Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5"/>
-        <!--UI-->
-        <PackageVersion Include="MahApps.Metro" Version="3.0.0-rc0529"/>
-        <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0"/>
-        <!--Build Tools-->
-        <PackageVersion Include="ILRepack" Version="2.0.41"/>
-        <PackageVersion Include="Nuke.Common" Version="9.0.4"/>
-        <PackageVersion Include="Autodesk.PackageBuilder" Version="2.0.2"/>
-        <PackageVersion Include="WixSharp.bin" Version="1.26.0"/>
-        <PackageVersion Include="WixSharp.wix.bin" Version="3.14.1"/>
-        <!--Test-->
-        <PackageVersion Include="xunit" Version="2.9.3"/>
-        <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.5"/>
-        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
-        <PackageVersion Include="Moq" Version="4.20.72" />
-        <PackageVersion Include="coverlet.collector" Version="6.0.4"/>
-    </ItemGroup>
+  <PropertyGroup>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+  </PropertyGroup>
+  <ItemGroup>
+    <!--Ioc-->
+    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="10.0.1" />
+    <!--Logging-->
+    <PackageVersion Include="Serilog" Version="4.3.1-dev-02395" />
+    <PackageVersion Include="Serilog.Formatting.Compact" Version="3.0.0" />
+    <PackageVersion Include="Serilog.Sinks.File" Version="7.0.1-dev-02315" />
+    <PackageVersion Include="Serilog.Sinks.SQLite" Version="6.0.0" />
+    <PackageVersion Include="Serilog.Sinks.RichTextBox.WinForms.Colored" Version="3.2.0" />
+    <PackageVersion Include="ZLogger" Version="2.5.10" />
+    <PackageVersion Include="ZString" Version="2.6.0" />
+    <!--Utilities-->
+    <PackageVersion Include="Nice3point.Revit.Build.Tasks" Version="3.0.1" />
+    <PackageVersion Include="JetBrains.Annotations" Version="2025.2.4" />
+    <PackageVersion Include="PolySharp" Version="1.15.0" />
+    <PackageVersion Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" />
+    <!--UI-->
+    <PackageVersion Include="MahApps.Metro" Version="3.0.0-rc0529" />
+    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <!--Build Tools-->
+    <PackageVersion Include="ILRepack" Version="2.0.41" />
+    <PackageVersion Include="Nuke.Common" Version="9.0.4" />
+    <PackageVersion Include="Autodesk.PackageBuilder" Version="2.0.2" />
+    <PackageVersion Include="WixSharp.bin" Version="1.26.0" />
+    <PackageVersion Include="WixSharp.wix.bin" Version="3.14.1" />
+    <!--Test-->
+    <PackageVersion Include="xunit" Version="2.9.3" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.5" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+    <PackageVersion Include="Moq" Version="4.20.72" />
+    <PackageVersion Include="coverlet.collector" Version="6.0.4" />
+  </ItemGroup>
 </Project>
