refactor(logging): improve logging configuration
- remove SQLite and Clef output from Serilog
- enhance Zlogger.RichTextBox.Winforms within ZString
- ui enhancement

--- a/source/RevitDevTool/RevitDevTool.csproj
+++ b/source/RevitDevTool/RevitDevTool.csproj
@@ -32,9 +32,7 @@
         
         <!-- Serilog -->
         <PackageReference Include="Serilog"/>
-        <PackageReference Include="Serilog.Formatting.Compact"/>
         <PackageReference Include="Serilog.Sinks.File"/>
-        <PackageReference Include="Serilog.Sinks.SQLite"/>
         <PackageReference Include="Serilog.Sinks.RichTextBox.WinForms.Colored"/>
         
         <!--Hosting-->
@@ -48,7 +46,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\RevitDevTool.RichTextBox.Colored\RevitDevTool.RichTextBox.Colored.csproj" />
+        <ProjectReference Include="..\ZLogger.RichTextBox.Winforms\ZLogger.RichTextBox.Winforms.csproj" />
     </ItemGroup>
 
     <!-- Copy SQLite.Interop.dll -->
