--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -34,5 +34,9 @@
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageVersion Include="Moq" Version="4.20.72" />
     <PackageVersion Include="coverlet.collector" Version="6.0.4" />
+    <!--Benchmark-->
+    <PackageVersion Include="BenchmarkDotNet" Version="0.15.8" />
+    <PackageVersion Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.15.8" />
+    <PackageVersion Include="Microsoft.Extensions.Logging" Version="10.0.1" />
   </ItemGroup>
 </Project>
