--- a/source/RevitDevTool/RevitDevTool.csproj
+++ b/source/RevitDevTool/RevitDevTool.csproj
@@ -1,79 +1,48 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <UseWPF>true</UseWPF>
         <UseWindowsForms>true</UseWindowsForms>
-        <Nullable>enable</Nullable>
-        <LangVersion>latest</LangVersion>
-        <PlatformTarget>x64</PlatformTarget>
-        <ImplicitUsings>true</ImplicitUsings>
-        <Prefer32Bit>false</Prefer32Bit>
         <DeployRevitAddin>true</DeployRevitAddin>
-        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-        <Configurations>Debug R21;Debug R22;Debug R23;Debug R24;Debug R25;Debug R26</Configurations>
-        <Configurations>$(Configurations)Release R21;Release R22;Release R23;Release R24;Release R25;Release R26</Configurations>
     </PropertyGroup>
 
     <PropertyGroup>
         <IsRepackable>true</IsRepackable>
         <RepackBinariesExcludes>
-            $(AssemblyName).UI*.dll
-            ;SQLite.Interop.dll
+            SQLite.Interop.dll;
+            MahApps.Metro.dll;
+            ControlzEx.dll;
+            Microsoft.Xaml.Behaviors.dll
         </RepackBinariesExcludes>
-    </PropertyGroup>
-
-    <!-- Revit Versions -->
-    <PropertyGroup Condition="$(Configuration.Contains('R21'))">
-        <RevitVersion>2021</RevitVersion>
-        <TargetFramework>net48</TargetFramework>
-    </PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('R22'))">
-        <RevitVersion>2022</RevitVersion>
-        <TargetFramework>net48</TargetFramework>
-    </PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('R23'))">
-        <RevitVersion>2023</RevitVersion>
-        <TargetFramework>net48</TargetFramework>
-    </PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('R24'))">
-        <RevitVersion>2024</RevitVersion>
-        <TargetFramework>net48</TargetFramework>
-    </PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('R25'))">
-        <RevitVersion>2025</RevitVersion>
-        <TargetFramework>net8.0-windows</TargetFramework>
-    </PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('R26'))">
-        <RevitVersion>2026</RevitVersion>
-        <TargetFramework>net8.0-windows</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
         <!-- Revit API-->
-        <PackageReference Include="Nice3point.Revit.Build.Tasks" Version="3.*" />
-        <PackageReference Include="Nice3point.Revit.Toolkit" Version="$(RevitVersion).*" />
-        <PackageReference Include="Nice3point.Revit.Extensions" Version="$(RevitVersion).*" />
-        <PackageReference Include="Nice3point.Revit.Api.RevitAPI" Version="$(RevitVersion).*" />
-        <PackageReference Include="Nice3point.Revit.Api.RevitAPIUI" Version="$(RevitVersion).*" />
-        <PackageReference Include="Nice3point.Revit.Api.UIFramework" Version="$(RevitVersion).*" />
-        <PackageReference Include="Nice3point.Revit.Api.AdWindows" Version="$(RevitVersion).*" />
+        <PackageReference Include="Nice3point.Revit.Build.Tasks"/>
+        <PackageReference Include="Nice3point.Revit.Toolkit" VersionOverride="$(RevitVersion).*" />
+        <PackageReference Include="Nice3point.Revit.Extensions" VersionOverride="$(RevitVersion).*" />
+        <PackageReference Include="Nice3point.Revit.Api.RevitAPI" VersionOverride="$(RevitVersion).*" />
+        <PackageReference Include="Nice3point.Revit.Api.RevitAPIUI" VersionOverride="$(RevitVersion).*" />
+        <PackageReference Include="Nice3point.Revit.Api.UIFramework" VersionOverride="$(RevitVersion).*" />
+        <PackageReference Include="Nice3point.Revit.Api.AdWindows" VersionOverride="$(RevitVersion).*" />
 
         <!-- UI -->
-        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-        <PackageReference Include="ricaun.Revit.UI" Version="0.8.0" />
+        <PackageReference Include="CommunityToolkit.Mvvm"/>
+        <PackageReference Include="MahApps.Metro"/>
         
         <!-- Serilog -->
-        <PackageReference Include="Serilog" Version="4.3.1-dev-02395" />
-        <PackageReference Include="Serilog.Formatting.Compact" Version="3.0.0" />
-        <PackageReference Include="Serilog.Sinks.File" Version="7.0.1-dev-02315" />
-        <PackageReference Include="Serilog.Sinks.SQLite" Version="6.0.0" />
-        <PackageReference Include="Serilog.Sinks.RichTextBox.WinForms.Colored" Version="3.2.0" />
+        <PackageReference Include="Serilog"/>
+        <PackageReference Include="Serilog.Sinks.File"/>
+        <PackageReference Include="Serilog.Sinks.RichTextBox.WinForms.Colored"/>
+        
+        <!--Hosting-->
+        <PackageReference Include="Microsoft.Extensions.Hosting"/>
 
         <!-- Utils -->
-        <PackageReference Include="JetBrains.Annotations" Version="2025.2.4" />
-        <PackageReference Include="PolySharp" Version="*" PrivateAssets="All" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
-        <PackageReference Include="ILRepack" Version="2.0.41" />
-        <PackageReference Include="System.Text.Json" Version="8.0.6" Condition="$(DefineConstants.Contains('NETFRAMEWORK'))" />
+        <PackageReference Include="JetBrains.Annotations" />
+        <PackageReference Include="PolySharp" PrivateAssets="All" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+        <PackageReference Include="ILRepack" />
+        <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Condition="$(DefineConstants.Contains('NETFRAMEWORK'))"/>
     </ItemGroup>
 
     <!-- Copy SQLite.Interop.dll -->
@@ -89,12 +58,7 @@
     </Target>
 
     <ItemGroup>
-        <Resource Include="Resources\Icons\TraceGeometry32_dark.tiff" />
-        <Resource Include="Resources\Icons\TraceGeometry32_light.tiff" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\RevitDevTool.UI\RevitDevTool.UI.csproj" />
+        <Resource Include="Resources\Icons\*.*" />
     </ItemGroup>
 
     <!-- Start Revit -->
