--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -8,12 +8,9 @@
     <PackageVersion Include="Microsoft.Extensions.Hosting" Version="10.0.1" />
     <!--Logging-->
     <PackageVersion Include="Serilog" Version="4.3.1-dev-02395" />
-    <PackageVersion Include="Serilog.Formatting.Compact" Version="3.0.0" />
+    <PackageVersion Include="Serilog.Enrichers.Autodesk.Revit" Version="2.0.1" />
     <PackageVersion Include="Serilog.Sinks.File" Version="7.0.1-dev-02315" />
-    <PackageVersion Include="Serilog.Sinks.SQLite" Version="6.0.0" />
     <PackageVersion Include="Serilog.Sinks.RichTextBox.WinForms.Colored" Version="3.2.0" />
-    <PackageVersion Include="ZLogger" Version="2.5.10" />
-    <PackageVersion Include="ZString" Version="2.6.0" />
     <!--Utilities-->
     <PackageVersion Include="Nice3point.Revit.Build.Tasks" Version="3.0.1" />
     <PackageVersion Include="JetBrains.Annotations" Version="2025.2.4" />
