--- a/source/RevitDevTool/RevitDevTool.csproj
+++ b/source/RevitDevTool/RevitDevTool.csproj
@@ -32,6 +32,7 @@
         
         <!-- Serilog -->
         <PackageReference Include="Serilog"/>
+        <PackageReference Include="Serilog.Enrichers.Autodesk.Revit" />
         <PackageReference Include="Serilog.Sinks.File"/>
         <PackageReference Include="Serilog.Sinks.RichTextBox.WinForms.Colored"/>
         
