--- a/source/Directory.Build.props
+++ b/source/Directory.Build.props
@@ -8,14 +8,10 @@
         <ImplicitUsings>true</ImplicitUsings>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-        <Configurations>Debug R21;Debug R22;Debug R23;Debug R24;Debug R25;Debug R26;</Configurations>
-        <Configurations>$(Configurations);Release R21;Release R22;Release R23;Release R24;Release R25;Release R26</Configurations>
+        <Configurations>Debug R22;Debug R23;Debug R24;Debug R25;Debug R26;</Configurations>
+        <Configurations>$(Configurations);Release R22;Release R23;Release R24;Release R25;Release R26</Configurations>
     </PropertyGroup>
 
-    <PropertyGroup Condition="$(Configuration.Contains('R21'))">
-        <RevitVersion>2021</RevitVersion>
-        <TargetFramework>net48</TargetFramework>
-    </PropertyGroup>
     <PropertyGroup Condition="$(Configuration.Contains('R22'))">
         <RevitVersion>2022</RevitVersion>
         <TargetFramework>net48</TargetFramework>
